examples/test/testpolicy6288.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6288
  namespace: namespace167
spec:
  podSelector:
    matchLabels:
      key1: value27
      key31: value25
      key26: value22
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value7
          key46: value26
      podSelector:
        matchLabels:
          key31: value36
          key37: value22
